docs: created API DOCS for Ticktes, and Banner
